fix overflow text on the posts page

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,9 @@
 	height: 20em;
 }
 
-.panel-ovrflow {
-	overflow-y: hidden; 
+.panel-box {
+	  font-size: 1em;
+    line-height: 1.5em;
+    height: 13em;
+    overflow: hidden;
 }
